# controllers/reviewsController.js
@@ -14,68 +14,39 @@ const getAllReviews = ctrlWrapper(async (req, res) => {
 });
 
 const getUserReview = ctrlWrapper(async (req, res) => {
-  const owner = req.user?._id;
-  // if (!owner) {
-  //   throw new HttpError(400, 'Missing owner');
-  // }
-  const result = await Review.find({ owner }).populate(
-    'owner',
-    '_id name avatarURL'
-  );
+  const { _id } = req.user;
+  const result = await Review.findOne({ owner: _id });
   if (!result) {
     throw new HttpError(404, 'Not found.🤷‍♀️');
   }
-  res.status(200).json(result);
+  const { rating, comment } = result;
+  res.status(200).json({ rating, comment });
 });
 
 const addReview = ctrlWrapper(async (req, res) => {
-  const body = req.body;
-  const owner = req.user?._id;
-
-  // if (!owner) {
-  //   throw new HttpError(400, 'Missing owner');
-  // }
-
-  if (!body) {
-    throw new HttpError(400, 'Missing body of request');
-  }
-  const existReview = await Review.findOne({ owner });
-  if (existReview) {
-    throw new HttpError(
-      409,
-      'You have already left a review, unfortunately you can only leave one review from user😒🤔'
-    );
-  }
+  const { _id: owner } = req.user;
   const newReview = await Review.create({ ...req.body, owner });
   if (!newReview) {
     throw new HttpError(500, 'Failed to create a review');
   }
-  res.status(201).json(newReview);
+  const { rating, comment } = newReview;
+  res.status(201).json({ rating, comment });
 });
 
 const updateReview = ctrlWrapper(async (req, res) => {
-  const owner = req.user?._id;
-  // if (!owner) {
-  //   throw new HttpError(400, 'Missing owner');
-  // }
-
-  // if (!req.body) {
-  //   throw new HttpError(400, 'Missing body of request');
-  // }
+  const { _id: owner } = req.user;
   const result = await Review.findOneAndUpdate({ owner }, req.body, {
     new: true,
-  }).populate('owner', 'name avatarURL');
+  });
   if (!result) {
     throw new HttpError(404, 'Not found.🤷‍♀️');
   }
-  res.status(200).json(result);
+  const { rating, comment } = result;
+  res.status(200).json({ rating, comment });
 });
 
 const deleteReview = ctrlWrapper(async (req, res) => {
-  const owner = req.user?._id;
-  // if (!owner) {
-  //   throw new HttpError(400, 'Missing owner');
-  // }
+  const { _id: owner } = req.user;
   const result = await Review.findOneAndDelete({ owner });
   if (!result) {
     throw new HttpError(404, 'Not found.🤦‍♀️');
